other-vpol/restrict-edit-for-endpoints/.chainsaw-test/clusterrole-update-and-create.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:aggregate-to-edit
rules:
- apiGroups: [""]
  resources: [endpoints]
  verbs: [update, create]
