other-vpol/restrict-edit-for-endpoints/.chainsaw-test/exception.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: PolicyException
metadata:
  name: allow-endpoint-update-only
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: restrict-edit-for-endpoints
    kind: ValidatingPolicy
  allowedValues:
  - update
  matchConditions:
  - name: exact-role
    expression: object.metadata.name == 'system:aggregate-to-edit'
