other-vpol/restrict-edit-for-endpoints/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-edit-for-endpoints
